fixed partners section logo items alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -157,6 +157,14 @@ body {
   border: 1px solid rgba(209, 213, 219, 0.3);
 }
 
+.uppernav-mobile-slide-0 {
+  transform: translateX(0);
+  margin-left: -2.5rem;
+}
+.uppernav-mobile-slide-full {
+  transform: translateX(-1000px);
+}
+
 .upper-nav-link::after {
   content: "";
   position: relative;
